[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.172.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pymongo>=4.13.1",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
]
